# arrrgs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: qa.yaml
aargs/: __init__.py  argument.py  command.py  parser.py
arrrgs/: __init__.py  argument.py  arguments.py  command.py  log.py  parser.py  run.py
examples/: aliases.py  args.py  basic.py  context.py  custom_name.py  environment.py  no_command.py  root_command.py  subcommand.py
src/arrrgs/: __init__.py  arguments.py  command.py  log.py  parser.py  run.py
