[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arrrgs"
authors = [
    {name = "Mikhael Khrustik", email = "misha@myrt.co"},
]
description = "The library for easily writing feature-rich Python scripts"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cli", "command-line-tool"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = ["argparse"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = [".version"]}

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]